--- a/CoCJnF.csproj
+++ b/CoCJnF.csproj
@@ -256,6 +256,9 @@
     <Reference Include="UnityEditor.WindowsStandalone.Extensions">
       <HintPath>D:/Programs/unity2017/Editor/Data/PlaybackEngines/windowsstandalonesupport/UnityEditor.WindowsStandalone.Extensions.dll</HintPath>
     </Reference>
+    <Reference Include="SyntaxTree.VisualStudio.Unity.Bridge">
+      <HintPath>C:/Program Files (x86)/Microsoft Visual Studio Tools for Unity/15.0/Editor/SyntaxTree.VisualStudio.Unity.Bridge.dll</HintPath>
+    </Reference>
     <Reference Include="JMOAssets">
       <HintPath>Assets/JMO Assets/Editor/JMOAssets.dll</HintPath>
     </Reference>
@@ -301,9 +304,6 @@
     <Reference Include="UnityEngine.StandardEvents">
       <HintPath>C:/Users/jkhome/AppData/LocalLow/Unity/cache/packages/packages.unity.com/com.unity.standardevents@1.0.10/UnityEngine.StandardEvents.dll</HintPath>
     </Reference>
-    <Reference Include="SyntaxTree.VisualStudio.Unity.Bridge">
-      <HintPath>C:/Program Files (x86)/Microsoft Visual Studio Tools for Unity/15.0/Editor/SyntaxTree.VisualStudio.Unity.Bridge.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="CoCJnF.Plugins.csproj">
@@ -320,8 +320,6 @@
     <Compile Include="Assets\AllAssets\Scripts\ServerGameController.cs" />
     <Compile Include="Assets\AllAssets\Scripts\SimpleRNG.cs" />
     <Compile Include="Assets\AllAssets\Scripts\Unit.cs" />
-    <Compile Include="Assets\Black Knight\AnimationEvent.cs" />
-    <Compile Include="Assets\Black Knight\demo\UnitControl.cs" />
     <Compile Include="Assets\JMO Assets\MatCap Shaders\Demo\Assets\MC_AutoRotate.cs" />
     <Compile Include="Assets\JMO Assets\MatCap Shaders\Demo\Assets\MC_SwitchTexture.cs" />
     <Compile Include="Assets\Prefabs\ThirdPersonCharacter\Scripts\AICharacterControl.cs" />
@@ -350,6 +348,11 @@
     <Compile Include="Assets\Scripts\DragMe.cs" />
     <Compile Include="Assets\Scripts\DragPanel.cs" />
     <Compile Include="Assets\Scripts\DropMe.cs" />
+    <Compile Include="Assets\Scripts\GridMover\AStar.cs" />
+    <Compile Include="Assets\Scripts\GridMover\IGridMover.cs" />
+    <Compile Include="Assets\Scripts\GridMover\QuadGrid.cs" />
+    <Compile Include="Assets\Scripts\GridMover\QuadGridMover.cs" />
+    <Compile Include="Assets\Scripts\GridMover\SelectGridMover.cs" />
     <Compile Include="Assets\Scripts\MusicHelper.cs" />
     <Compile Include="Assets\Scripts\Overworld\GridPersonCharacter.cs" />
     <Compile Include="Assets\Scripts\Overworld\GridPersonUserControl.cs" />
@@ -367,7 +370,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\AllAssets\readme.txt" />
-    <None Include="Assets\Black Knight\ReadMe.txt" />
     <None Include="Assets\Fonts\Jupiter\LICENSE.txt" />
     <None Include="Assets\JMO Assets\!JMO Assets Readme.txt" />
     <None Include="Assets\JMO Assets\MatCap Shaders\Shaders\MatCap_Lit.shader" />
