importe some scripst

--- a/CoCJnF.csproj
+++ b/CoCJnF.csproj
@@ -339,20 +339,63 @@
     <Compile Include="Assets\ProCore\ProGrids\Classes\pg_Util.cs" />
     <Compile Include="Assets\ProCore\ProGrids\MonoBehaviour\pg_IgnoreSnap.cs" />
     <Compile Include="Assets\Scripts\ActiveStateToggler.cs" />
+    <Compile Include="Assets\Scripts\Animation\EasingControl.cs" />
+    <Compile Include="Assets\Scripts\Animation\EasingEquations.cs" />
+    <Compile Include="Assets\Scripts\Animation\RectTransformAnchorPositionTweener.cs" />
+    <Compile Include="Assets\Scripts\Animation\RectTransformAnimationExtensions.cs" />
+    <Compile Include="Assets\Scripts\Animation\TransformAnimationExtensions.cs" />
+    <Compile Include="Assets\Scripts\Animation\TransformLocalEulerTweener.cs" />
+    <Compile Include="Assets\Scripts\Animation\TransformLocalPositionTweener.cs" />
+    <Compile Include="Assets\Scripts\Animation\TransformPositionTweener.cs" />
+    <Compile Include="Assets\Scripts\Animation\TransformScaleTweener.cs" />
+    <Compile Include="Assets\Scripts\Animation\Tweener.cs" />
+    <Compile Include="Assets\Scripts\Animation\Vector3Tweener.cs" />
     <Compile Include="Assets\Scripts\ApplicationManager.cs" />
     <Compile Include="Assets\Scripts\AudioHelper.cs" />
     <Compile Include="Assets\Scripts\BarManager.cs" />
+    <Compile Include="Assets\Scripts\Battle\Battle.cs" />
+    <Compile Include="Assets\Scripts\Battle\CombatScript.cs" />
     <Compile Include="Assets\Scripts\CameraController.cs" />
     <Compile Include="Assets\Scripts\ChangeColor.cs" />
     <Compile Include="Assets\Scripts\ClickToMoveController.cs" />
+    <Compile Include="Assets\Scripts\Core\Controller\BaseViewController.cs" />
+    <Compile Include="Assets\Scripts\Core\Controller\CombatantView.cs" />
+    <Compile Include="Assets\Scripts\Core\Controller\CombatViewController.cs" />
+    <Compile Include="Assets\Scripts\Core\Controller\ExploreState.cs" />
+    <Compile Include="Assets\Scripts\Core\Controller\ExploreViewController.cs" />
+    <Compile Include="Assets\Scripts\Core\Controller\IntroMenuViewController.cs" />
+    <Compile Include="Assets\Scripts\Core\Controller\IntroState.cs" />
+    <Compile Include="Assets\Scripts\Core\Controller\MenuState.cs" />
+    <Compile Include="Assets\Scripts\Core\Controller\NewGameState.cs" />
+    <Compile Include="Assets\Scripts\Core\Controller\NewGameViewController.cs" />
+    <Compile Include="Assets\Scripts\Core\DatabaseController.cs" />
+    <Compile Include="Assets\Scripts\Core\DataController.cs" />
+    <Compile Include="Assets\Scripts\Core\FlowController.cs" />
+    <Compile Include="Assets\Scripts\Core\GameFactory.cs" />
+    <Compile Include="Assets\Scripts\Core\PlayerFactory.cs" />
+    <Compile Include="Assets\Scripts\Core\SimpleObjectPool.cs" />
+    <Compile Include="Assets\Scripts\Core\SQLite.cs" />
+    <Compile Include="Assets\Scripts\Core\StateMachine.cs" />
+    <Compile Include="Assets\Scripts\Core\StreamingAssetCopier.cs" />
     <Compile Include="Assets\Scripts\DragMe.cs" />
     <Compile Include="Assets\Scripts\DragPanel.cs" />
     <Compile Include="Assets\Scripts\DropMe.cs" />
+    <Compile Include="Assets\Scripts\ECS\Component.cs" />
+    <Compile Include="Assets\Scripts\ECS\Components\Encounterable.cs" />
+    <Compile Include="Assets\Scripts\ECS\Components\Evolvable.cs" />
+    <Compile Include="Assets\Scripts\ECS\Components\Move.cs" />
+    <Compile Include="Assets\Scripts\ECS\Components\SpeciesStats.cs" />
+    <Compile Include="Assets\Scripts\ECS\Components\Type.cs" />
+    <Compile Include="Assets\Scripts\ECS\Components\TypeMultiplier.cs" />
+    <Compile Include="Assets\Scripts\ECS\Entity.cs" />
+    <Compile Include="Assets\Scripts\ECS\EntityComponent.cs" />
     <Compile Include="Assets\Scripts\GridMover\AStar.cs" />
     <Compile Include="Assets\Scripts\GridMover\IGridMover.cs" />
     <Compile Include="Assets\Scripts\GridMover\QuadGrid.cs" />
     <Compile Include="Assets\Scripts\GridMover\QuadGridMover.cs" />
     <Compile Include="Assets\Scripts\GridMover\SelectGridMover.cs" />
+    <Compile Include="Assets\Scripts\Model\Game.cs" />
+    <Compile Include="Assets\Scripts\Model\Player.cs" />
     <Compile Include="Assets\Scripts\MusicHelper.cs" />
     <Compile Include="Assets\Scripts\Overworld\GridPersonCharacter.cs" />
     <Compile Include="Assets\Scripts\Overworld\GridPersonUserControl.cs" />
@@ -367,6 +410,15 @@
     <Compile Include="Assets\Scripts\ScrollDetailTexture.cs" />
     <Compile Include="Assets\Scripts\ShowSliderValue.cs" />
     <Compile Include="Assets\Scripts\TiltWindow.cs" />
+    <Compile Include="Assets\Scripts\UI\BarGraph.cs" />
+    <Compile Include="Assets\Scripts\UI\ButtonListBuilder.cs" />
+    <Compile Include="Assets\Scripts\UI\ButtonWithSymbol.cs" />
+    <Compile Include="Assets\Scripts\UI\LayoutAnchor.cs" />
+    <Compile Include="Assets\Scripts\UI\Panel.cs" />
+    <Compile Include="Assets\Scripts\UI\Transition\BaseTransition.cs" />
+    <Compile Include="Assets\Scripts\UI\Transition\GroupTransition.cs" />
+    <Compile Include="Assets\Scripts\UI\Transition\PanelTransition.cs" />
+    <Compile Include="Assets\Scripts\UI\Transition\ScaleTransition.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\AllAssets\readme.txt" />
