--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -167,14 +167,18 @@
     <Compile Include="Assets\Scripts\Core\StreamingAssetCopier.cs" />
     <Compile Include="Assets\Scripts\Creatures\Tiger.cs" />
     <Compile Include="Assets\Scripts\DemoGame\Interactables\ItemContainer.cs" />
+    <Compile Include="Assets\Scripts\DemoGame\Interactables\NPCTalk.cs" />
     <Compile Include="Assets\Scripts\DemoGame\Interactables\rAddItem.cs" />
+    <Compile Include="Assets\Scripts\DemoGame\Interactables\rInitTalk.cs" />
     <Compile Include="Assets\Scripts\DemoGame\Interactables\rInitTrade.cs" />
     <Compile Include="Assets\Scripts\DemoGame\Items\LockPick.cs" />
+    <Compile Include="Assets\Scripts\DemoGame\Items\WiseManGoogles.cs" />
+    <Compile Include="Assets\Scripts\DemoGame\NPC\NPCTrader.cs" />
     <Compile Include="Assets\Scripts\DemoGame\Quest\QstWiseManGoogles.cs" />
     <Compile Include="Assets\Scripts\DemoGame\Quest\QuestGlobals.cs" />
     <Compile Include="Assets\Scripts\DemoGame\Quest\SceneBandit.cs" />
+    <Compile Include="Assets\Scripts\DemoGame\Quest\SceneTrader.cs" />
     <Compile Include="Assets\Scripts\DemoGame\Quest\SceneWiseMan.cs" />
-    <Compile Include="Assets\Scripts\DemoGame\WiseMansGoogles.cs" />
     <Compile Include="Assets\Scripts\DragMe.cs" />
     <Compile Include="Assets\Scripts\DragPanel.cs" />
     <Compile Include="Assets\Scripts\DropMe.cs" />
@@ -228,6 +232,7 @@
     <Compile Include="Assets\Scripts\UI\Transition\GroupTransition.cs" />
     <Compile Include="Assets\Scripts\UI\Transition\PanelTransition.cs" />
     <Compile Include="Assets\Scripts\UI\Transition\ScaleTransition.cs" />
+    <Compile Include="Assets\Scripts\UI\UI_InventoryPanel.cs" />
     <Compile Include="Assets\Scripts\UI\UI_Overworld.cs" />
     <Compile Include="Assets\Scripts\UI\UI_Questlog.cs" />
     <Compile Include="Assets\Scripts\UI\UI_SaveLoadPanel.cs" />
@@ -237,42 +242,59 @@
     <Compile Include="Assets\Scripts\VN\DialogTree.cs" />
     <Compile Include="Assets\Scripts\VN\DialogTreeBuilder.cs" />
     <None Include="Assets\JMO Assets\MatCap Shaders\Shaders\MatCap_TextureAdd_Bumped.shader" />
+    <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface-Mobile.shader" />
+    <None Include="Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
     <None Include="Assets\_MK\MKToonFree\Shader\Inc\Outline\MKToonOutlineOnlyIO.cginc" />
     <None Include="Assets\_MK\MKToonFree\Shader\MKToonFreeOutlineOnly.shader" />
     <None Include="Assets\JMO Assets\MatCap Shaders\Shaders\MatCap_TextureMult_Bumped.shader" />
     <None Include="Assets\_MK\MKToonFree\Shader\Inc\Outline\MKToonOutlineOnlySetup.cginc" />
+    <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro_Properties.cginc" />
     <None Include="Assets\_MK\MKToonFree\Shader\Inc\Common\MKToonInc.cginc" />
     <None Include="Assets\_MK\MKToonFree\Shader\Inc\Outline\MKToonOutlineOnlyBase.cginc" />
     <None Include="Assets\Fonts\Jupiter\LICENSE.txt" />
+    <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_Bitmap-Custom-Atlas.shader" />
     <None Include="Assets\_MK\MKToonFree\Shader\Inc\ShadowCaster\MKToonShadowCasterIO.cginc" />
     <None Include="Assets\Textures and Sprites\SF UI\Background\LICENSE.txt" />
     <None Include="Assets\Models\Level Making Models\Tree\tropical_plant\readme.txt" />
     <None Include="Assets\JMO Assets\MatCap Shaders\Shaders\MatCap_Lit.shader" />
     <None Include="Assets\JMO Assets\MatCap Shaders\Shaders\MatCap_Plain_Bumped.shader" />
     <None Include="Assets\_MK\MKToonFree\Shader\Inc\Forward\MKToonForwardAddSetup.cginc" />
+    <None Include="Assets\TextMesh Pro\Resources\LineBreaking Following Characters.txt" />
     <None Include="Assets\JMO Assets\MatCap Shaders\Shaders\MatCap_Plain_AdditiveZ.shader" />
+    <None Include="Assets\TextMesh Pro\Sprites\EmojiOne Attribution.txt" />
     <None Include="Assets\JMO Assets\!JMO Assets Readme.txt" />
     <None Include="Assets\_MK\MKToonFree\Shader\Inc\Forward\MKToonForwardIO.cginc" />
+    <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Mobile Masking.shader" />
     <None Include="Assets\_MK\MKToonFree\Shader\MKToonFreeMobile.shader" />
     <None Include="Assets\_MK\MKToonFree\Shader\Inc\Common\MKToonDef.cginc" />
+    <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_Bitmap-Mobile.shader" />
     <None Include="Assets\Materials\UI-Default-No-Alpha.shader" />
     <None Include="Assets\JMO Assets\MatCap Shaders\Shaders\MatCap_Plain.shader" />
     <None Include="Assets\Fonts\OFL.txt" />
     <None Include="Assets\_MK\MKToonFree\Shader\Inc\Surface\MKToonSurfaceIO.cginc" />
     <None Include="Assets\JMO Assets\MatCap Shaders\Shaders\MatCap_Plain_Additive.shader" />
     <None Include="Assets\_MK\MKToonFree\Shader\Inc\ShadowCaster\MKToonShadowCasterSetup.cginc" />
+    <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF Overlay.shader" />
     <None Include="Assets\JMO Assets\MatCap Shaders\Shaders\MatCap_TextureMult.shader" />
     <None Include="Assets\_MK\MKToonFree\Shader\Inc\Forward\MKToonForwardBaseSetup.cginc" />
+    <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro_Surface.cginc" />
     <None Include="Assets\_MK\MKToonFree\Shader\Inc\Common\MKToonLight.cginc" />
+    <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Mobile Overlay.shader" />
     <None Include="Assets\Prefabs\ThirdPersonCharacter\ThirdPersonCharacterGuidelines.txt" />
     <None Include="Assets\_MK\MKToonFree\Shader\MKToonFree.shader" />
+    <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_Bitmap.shader" />
     <None Include="Assets\_MK\MKToonFree\Shader\Inc\Forward\MKToonForward.cginc" />
+    <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro.cginc" />
     <None Include="Assets\JMO Assets\MatCap Shaders\Shaders\MatCap_TextureAdd.shader" />
     <None Include="Assets\AllAssets\readme.txt" />
+    <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF.shader" />
     <None Include="Assets\_MK\MKToonFree\Shader\Inc\Common\MKToonV.cginc" />
     <None Include="Assets\JMO Assets\MatCap Shaders\Textures\MaCrea\MaCrea.txt" />
+    <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Mobile.shader" />
     <None Include="Assets\_MK\MKToonFree\Shader\Inc\Surface\MKToonSurface.cginc" />
+    <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_Sprite.shader" />
     <None Include="Assets\JMO Assets\MatCap Shaders\Textures\BenSimonds\_Textures Readme.txt" />
+    <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface.shader" />
     <None Include="Assets\_MK\MKToonFree\Shader\Inc\ShadowCaster\MKToonShadowCaster.cginc" />
     <None Include="Assets\JMO Assets\MatCap Shaders\_MatCap Shaders Readme.txt" />
     <Reference Include="Unity.TextMeshPro.Editor">
